Добавлены фильтры и сортировка на бэк (#15)
* Добавлены фильтры и сортировка на бэк

* Добавлена возможность сортировки по ограниченному набору полей

* правки после ревью

* фиксы стилей импортов
