# packages/backend/swagger.json
@@ -165,6 +165,77 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"SortDTO_ProductDTO.keyofProductDTO_": {
+				"properties": {
+					"by": {
+						"type": "string",
+						"enum": [
+							"id",
+							"name",
+							"description",
+							"price",
+							"category"
+						],
+						"nullable": false,
+						"description": "Поле для сортировки"
+					},
+					"order": {
+						"type": "string",
+						"enum": [
+							"asc",
+							"desc"
+						],
+						"description": "Порядок сортировки"
+					}
+				},
+				"required": [
+					"by",
+					"order"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ProductListRequestDTO": {
+				"description": "Запрос для получения списка продуктов",
+				"properties": {
+					"take": {
+						"type": "integer",
+						"format": "int32",
+						"description": "Кол-во необходимых элементов",
+						"example": 10
+					},
+					"skip": {
+						"type": "integer",
+						"format": "int32",
+						"description": "Кол-во элементов, которые нужно пропустить (например они были запрошены ранее)",
+						"example": 0
+					},
+					"categoryId": {
+						"type": "integer",
+						"format": "int32",
+						"description": "ID категории для фильтрации"
+					},
+					"minPrice": {
+						"type": "number",
+						"format": "double",
+						"description": "Минимальная цена"
+					},
+					"maxPrice": {
+						"type": "number",
+						"format": "double",
+						"description": "Максимальная цена"
+					},
+					"sort": {
+						"$ref": "#/components/schemas/SortDTO_ProductDTO.keyofProductDTO_"
+					}
+				},
+				"required": [
+					"take",
+					"skip"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -403,8 +474,8 @@
 			}
 		},
 		"/products": {
-			"get": {
-				"operationId": "ListProducts",
+			"post": {
+				"operationId": "GetFilteredProducts",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -420,12 +491,22 @@
 						}
 					}
 				},
-				"description": "Получить список всех товаров",
+				"description": "Получить список товаров с фильтрацией и пагинацией",
 				"tags": [
 					"Product"
 				],
 				"security": [],
-				"parameters": []
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ProductListRequestDTO"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/products/{productId}": {
